Try remove *RAMPercentage