@@ -426,12 +426,8 @@
 							<jvmFlag>-javaagent:/opentelemetry/opentelemetry-javaagent.jar</jvmFlag>
 							<jvmFlag>-Dlogging.config=classpath:logback-stdout-json.xml</jvmFlag>
 							<jvmFlag>-server</jvmFlag>
-							<jvmFlag>-XX:MaxRAMPercentage=65</jvmFlag>
-							<jvmFlag>-XX:InitialRAMPercentage=20</jvmFlag>
 							<jvmFlag>-XX:+HeapDumpOnOutOfMemoryError</jvmFlag>
 							<jvmFlag>-XX:HeapDumpPath=/tmp/eventapi_oom.hprof</jvmFlag>
-							<jvmFlag>-XX:+UseZGC</jvmFlag>
-							<jvmFlag>-XX:SoftMaxHeapSize=34359738368</jvmFlag>
 							<!--<jvmFlag>-XX:+UseG1GC</jvmFlag>-->
 							<!--<jvmFlag>-Xlog:gc*:file=%h/log/event-api.GC.log</jvmFlag>-->
 						</jvmFlags>
